[package]
name = "tinytun-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.4", features = ["derive"] }
h2 = "0.3.18"
hyper = { version = "0.14.23", features = ["full"] }
hyper-tls = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
