[package]
name = "tinytun-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tinytun"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
http = "0.2.8"
tinytun = { path = "../tinytun" }
tokio = { version = "1.25.0", features = ["full"] }
