[package]
name = "tinytun-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.4", features = ["derive"] }
dashmap = "5.4.0"
h2 = "0.3.18"
httparse = "1.8.0"
hyper = { version = "0.14.23", features = ["full"] }
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
