[package]
name = "tinytun-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.4", features = ["derive"] }
dashmap = "5.4.0"
h2 = "0.3.18"
httparse = "1.8.0"
hyper = { version = "0.14.23", features = ["full"] }
pin-project = "1.0.12"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tinytun = { path = "../tinytun" }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
