[package]
name = "tinytun-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tinytun_server"
path = "src/lib.rs"

[[bin]]
name = "tinytun-server"
path = "src/main.rs"

[dependencies]
bytes = "1.4.0"
h2 = "0.3.18"
httparse = "1.8.0"
hyper = { version = "0.14.23", features = ["full"] }
pin-project-lite = "0.2.9"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1"
serde_json = "1.0.96"
tinytun = { path = "../tinytun" }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.2", features = ["fast-rng", "v4"] }
