[package]
name = "tinytun"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.4.0"
h2 = "0.3.18"
hyper = { version = "0.14.23", features = ["client", "http1"] }
hyper-rustls = { version = "0.24.0", features = ["http1"] }
tokio = { version = "1.25.0", features = ["io-std", "net"] }
